# meridian

./: .dockerignore  .env.example  .gitignore  AUDIT.md  Anchor.toml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  OVERVIEW.md  README.md  entrypoint.sh  frontend.Dockerfile  package-lock.json  package.json  railway.json  tsconfig.json
.githooks/: pre-push
app/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
automation/: .env.example  Dockerfile  entrypoint.sh  package-lock.json  package.json  railway.json  read-api.Dockerfile  tsconfig.json
circuits/: brag.circom  build.sh  package-lock.json  package.json
config/: devnet.env.example
frontend/: .gitignore  index.html  package.json  vite.config.ts
mock-pyth/: Cargo.toml
programs/meridian/: Cargo.toml
programs/meridian/src/: errors.rs  lib.rs
programs/meridian/src/instructions/: add_strike.rs  admin_settle.rs  burn_pair.rs  buy_no.rs  buy_yes.rs  cancel_order.rs  claim_fills.rs  close_market.rs  create_strike_market.rs  force_close_market.rs  freeze_market.rs  initialize_config.rs  initialize_order_book.rs  mint_pair.rs  mod.rs  pause.rs  place_order.rs  redeem.rs  sell_no.rs  sell_yes.rs  settle_market.rs  shared.rs  unpause.rs  unwind_order.rs  update_config.rs
programs/meridian/src/state/: config.rs  market.rs  mod.rs  orderbook.rs
scripts/: alpha-cycle.ts  alpha-settle.ts  automation.ts  bot-utils.ts  build-tree.ts  constants.ts  cycle.ts  dev-wallets.ts  devnet-fund.ts  fair-value.test.ts  fair-value.ts  force-close-markets.ts  fund-bots.ts  health-check.ts  live-bots.ts  pyth.ts  (+20 more)
(+98 files in other folders)
